--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultório Médico</title>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <div id="app">
         <h1>Datas Disponíveis para Consultas</h1>
+        <img src="" alt="">
         <button id="loadData">Carregar Datas</button>
         <div id="data"></div>
     </div>
+    
     <script src="script.js"></script>
+
 </body>
 </html>
